# string-art

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
cmake/: CompilerWarnings.cmake
include/string_art/: abstract_metric.hpp  abstract_solver.hpp  string_art.hpp
include/string_art/metrics/: mse.hpp
include/string_art/solvers/: greedy.hpp
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/string_art/: CMakeLists.txt  abstract_metric.cpp  abstract_solver.cpp  string_art.cpp
src/string_art/metrics/: mse.cpp
src/string_art/solvers/: greedy.cpp
tests/: CMakeLists.txt  string_art_test.cpp
